<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <!--音乐播放器区域-->

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:layout_marginStart="20dp"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/music_now_playing"
            android:textSize="32sp"
            android:id="@+id/music_title_textview"/>

        <!--音乐播放器功能控制区-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/last_music"
                android:id="@+id/last_music_btn"
                android:src="@drawable/left_arrow"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/music_start_btn_des"
                android:id="@+id/music_play_btn"
                android:src="@drawable/play_buttton"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/music_pause_btn"
                android:id="@+id/music_pause_btn"
                android:src="@drawable/pause"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:contentDescription="@string/next_music"
                android:id="@+id/next_music_btn"
                android:src="@drawable/right_arrow"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

        <!--进度条和音量区-->
        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp">

            <SeekBar
                style="@style/Widget.AppCompat.ProgressBar.Horizontal"
                android:layout_width="500dp"
                android:layout_height="50dp"
                android:id="@+id/time_seekbar"
                android:max="100"/>

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:id="@+id/volume_btn"
                android:contentDescription="@string/mute_music"
                android:src="@drawable/volume"/>

            <SeekBar
                android:layout_width="200dp"
                android:layout_height="50dp"
                android:layout_marginStart="30dp"
                android:id="@+id/volume_bar"
                android:progress="5"
                android:max="10"/>

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>

</LinearLayout>